# Semester_3

./: README.md
Dat200/Assignments/oving2/: Linkedlist.py  doublelinkedlist.py  doublelinkedlist_alt.py
Dat200/Assignments/oving3/: oppg1.py  oppg2.py
Dat200/Assignments/oving4/: awnsers.txt  findPivot.py  insertArray.py  partitionArray.py  quicksort.py
Dat200/Assignments/oving4ny/: hitlersort.py  insrtion.py  partition.py  pivot.py  quicksort.py
Dat200/Assignments/oving5/: Assignment5.ipynb  Hashing.ipynb  Phonebook.csv  part1.py  part2.py
Dat200/Assignments/oving7/: q.md  questions.md  questions2.md
Dat200/Determinants/: lab1.py
Dat200/LinkedLists/: exapmle1.py  tester.py  tlerSort.py
Dat200/Searching data_Recursion/: anagrams.py  exponential.py  factorialOfN.py  fibanachiSequence.py  towersOfHanoi.py
Dat250/: ass1_banditcheck.html  ass2_banditcheck.html
Dat250/HactheBox/module19/: academy-regular.ovpn
Dat250/assignment1/: banditResults.txt  pyproject.toml
Dat250/assignment1/socialinsecurity/: pyproject.toml  socialinsecurity.py
Dat250/assignment1/socialinsecurity/app/: routes.py
Dat250/assignment2/Hackingfiles/: burp.txt  scanresults.html  signupFile  targeting
Dat250/assignment2/assignment1/: request.txt
Dat250/assignment2/tests/: securitytest.xml
Dat250/lab1/: pyproject.toml
Dat320/practicego/: go.mod  writer.go
Dat320/sess1/: go.mod  main.go
Dat320/sess1/arth/: adders.go
Dat320/session2/: runner1.go
Dat320/session2/compsys/: cpu.go
Onehaker/Zomato/: zomato-2023-11-05T23 31 14Z.json
(+11 files in other folders)
