[project]
name = "lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "WindKunai", email = "117094794+WindKunai@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
